Changed header to h1 from h4 to fix spacing issues.

--- a/app/assets/stylesheets/fiscal_years.css.scss
+++ b/app/assets/stylesheets/fiscal_years.css.scss
@@ -5,6 +5,8 @@ application.css.
 You can use Sass (SCSS) here:
 http://sass-lang.com/*/
 
+/*Make Webkit stuff go away*/
+
 header {
   text-align: center;
   background-color: #FFE7BA;
@@ -16,14 +18,15 @@ header {
   font-family: verdana, helvetica, serif, arial, 'Times New Roman';
 }
 
-header:hover {
-  font-weight: bold;
-}
 
-header h4 {
+header h1 {
   font-size: 5em;
   font-weight: normal;
   line-height: 0.1em;
+}
+
+header:hover {
+  font-weight: bold;
 }
 
 header p {
